--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,7 +2,41 @@
 
 <!-- Step 1: List all transactions, starting with the ICO -->
 
-<!-- Step 2: Calculate and display the balances -->
+<%
+    transactions = Transaction.all
+    users = User.all
+%>
+
+<ol>
+    <% for transaction in transactions %>
+        <% if transaction["from_user_id"] != nil %>
+            <li>
+                <%= transaction["amount"] %> KC from 
+                <% from_user = User.find_by({ "id" => transaction["from_user_id"] }) %>
+                <%= from_user["name"] %> to
+                <% to_user = User.find_by({ "id" => transaction["to_user_id"] }) %>
+                <%= to_user["name"] %>
+            </li>
+        <% else %>
+            <li>
+                Initial coin offering: 
+                <%= transaction["amount"] %> KC to 
+                <% to_user = User.find_by({ "id" => transaction["to_user_id"] }) %>
+                <%= to_user["name"] %>                
+            </li>
+        <% end %>
+    <% end %>
+</ol>
+
+<ul>
+    <% for user in users %>
+        <% balance = Transaction.where({ "to_user_id" => user["id"] }).sum("amount")-Transaction.where({ "from_user_id" => user["id"] }).sum("amount") %>
+        <li>
+            Balance for <%= user["name"] %>:
+            <%= balance %> KC
+        </li>
+    <% end %>
+</ul>
 
 <!-- 
 Expected balances:
@@ -12,3 +46,18 @@ Balance for Evan: 1164 KC
 Balance for Anthony: 1456 KC
 Balance for Krystina: 3516 KC 
 -->
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Balance (KC)</th>
+    </tr>
+    <% for user in users %>
+        <% balance = Transaction.where({ "to_user_id" => user["id"] }).sum("amount")-Transaction.where({ "from_user_id" => user["id"] }).sum("amount") %>
+        <tr>
+            <td><%= user["name"] %></td>
+            <td><%= balance %></td>
+        </tr>
+    <% end %>
+    </tr>
+</table>
